# mistral-worldwide

./: .gitignore  README.md  flake.nix  pyproject.toml  send_webcam_ws.py  setup_api_server.sh  yolotoworldstate.py
agent/: __init__.py  crop_describer.py  inference.py  loop.py  prompt_builder.py
agent/tools/: __init__.py  dispatcher.py  schemas.py
api/: embedded_server.py  main.py
api/routes/: debug_frame.py  video_stream.py
conversation/: __init__.py  manager.py
memory/: __init__.py  embeddings.py  graph_history.py  retriever.py  semantic_index.py
observability/: vizgraph.py
orchestration/: __init__.py  aux_context.py  pipeline.py
perception/: __init__.py  botsort.yaml  frame_provider.py  yoloworldstate.py
ui/: __init__.py  app.py  styles.tcss
