[project]
name = "mistral-worldwide"
version = "0.1.0"
description = "Mistral Worldwide API and utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "websockets",
    "pydantic",
    "networkx",
    "numpy",
    "opencv-python",
    "pillow",
    "ultralytics",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["routes"]
include = ["main.py"]
